# el-pipeline

./: .gitignore  GRADIO_UI.md  README.md  app.py  pyproject.toml  requirements.txt  test_gradio_app.py
config/: lela_bm25_only.json  lela_example.json
data/test/: config_full_pipeline.json  config_simple_fuzzy.json  sample_doc.txt
docs/: API.md  CLI.md  DEVELOPMENT.md  LELA.md  PIPELINE.md  README.md  REQUIREMENTS.md  TESTING.md  TROUBLESHOOTING.md  WEB_APP.md
el_pipeline/: __init__.py  cli.py  config.py  memory.py  pipeline.py  registry.py  types.py
el_pipeline/knowledge_bases/: base.py  custom.py  wikidata.py  wikipedia.py
el_pipeline/lela/: __init__.py  config.py  llm_pool.py  prompts.py
el_pipeline/loaders/: base.py  docx.py  html.py  pdf.py  text.py
el_pipeline/scripts/: __init__.py  convert_yago_labels.py  convert_yago_sample.py
el_pipeline/spacy_components/: __init__.py  candidates.py  disambiguators.py  ner.py  rerankers.py
el_pipeline/utils/: __init__.py  spans.py
lela/: __init__.py  cli.py  pipeline.py  types.py
lela/knowledge_bases/: __init__.py  base.py  custom.py  jsonl.py
ner_pipeline/: __init__.py  cli.py  config.py  context.py  memory.py  pipeline.py  registry.py  types.py
ner_pipeline/candidates/: __init__.py  base.py  bm25.py  dense.py  fuzzy.py
ner_pipeline/disambiguators/: __init__.py  base.py  first.py  llm.py  popularity.py
ner_pipeline/knowledge_bases/: __init__.py  base.py  custom.py  wikidata.py  wikipedia.py
ner_pipeline/lela/: config.py  llm_pool.py
ner_pipeline/loaders/: pdf.py  (+5 more)
tests/: __init__.py  conftest.py
(+43 files in other folders)
