[project]
name = "ner-pipeline"
version = "0.1.0"
description = "A modular NER and entity linking pipeline"
requires-python = ">=3.10,<3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bm25s>=0.2.14",
    "faiss-cpu>=1.13.2",
    "gliner>=0.2.24",
    "gradio>=6.5.1",
    "pdfplumber>=0.11.9",
    "pystemmer>=3.0.0",
    "python-docx>=1.2.0",
    "rank-bm25>=0.2.2",
    "rapidfuzz==3.14.3",
    "sentence-transformers>=5.2.2",
    "spacy>=3.8.11",
    "vllm>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (requiring model downloads)",
    "integration: marks tests as integration tests",
    "requires_spacy: marks tests requiring spaCy models",
    "requires_transformers: marks tests requiring HuggingFace transformers",
    "requires_sentence_transformers: marks tests requiring sentence-transformers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["el_pipeline"]
omit = [
    "el_pipeline/scripts/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
